--- a/css/main.css
+++ b/css/main.css
@@ -24,9 +24,10 @@ body textarea:required:valid {
 
 body {
   direction: rtl;
-  font-size: 16px;
+  font-size: 18px;
   min-width: 320px;
-  max-width: 1200px;
+  max-width: 100%;
+  text-align: right;
   height: 100vh;
   width: 100%;
   padding: 0;
@@ -53,48 +54,82 @@ ul {
   margin: 0;
   padding: 0; }
 
-.header,
-.content,
-.footer {
-  width: 100%;
-  color: white;
-  font-weight: bold;
-  font-size: 1em;
-  text-align: center;
-  display: flex;
-  justify-content: space-around; }
-
+/*______________       Header CSS        _______________*/
 .header {
   align-items: center;
-  min-height: 100px; }
+  min-height: 100px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #e5edee; }
+
+.header__logo,
+.header__menu,
+.header__phone {
+  height: 100px;
+  display: flex; }
+
+.header__logo {
+  border-left: 1px solid #e5edee;
+  padding-left: 20px; }
+
+.logo__link {
+  display: flex;
+  align-items: center; }
 
 .header__menu {
   max-width: 730px;
   width: 100%; }
 
-nav.menu {
-  display: flex; }
+.menu {
+  display: flex;
+  width: 100%; }
 
 .menu-item {
   list-style: none;
   display: inline-flex;
   margin: auto; }
+  .menu-item a {
+    color: #000; }
 
-.phone__call {
+.header__phone {
   border-right: 1px solid #e5edee; }
 
 .link__phone {
   display: flex;
   align-items: center;
-  margin: 0 15px; }
+  margin: auto 15px; }
 
 .icon__phone {
   margin-left: 15px; }
 
+.phone__label {
+  color: #000; }
+
+.phone__number {
+  color: #233582;
+  font-size: 20px;
+  font-weight: 600; }
+
+/*_____________      Content CSS            _______________*/
 .header__banner {
+  position: relative;
   width: 100%;
   height: 100%;
-  color: #fff; }
+  color: #fff;
+  display: flex;
+  justify-content: flex-start; }
+
+.banner__group-text {
+  position: absolute;
+  display: block;
+  bottom: 60px;
+  right: 60px; }
+
+.banner__title {
+  font-size: 40px;
+  font-weight: 600; }
+
+.banner__decription {
+  font-size: 22px; }
 
 /*==========  Desktop First Method  ==========*/
 /* Large Devices, Wide Screens */
