--- a/pug/template/header.html
+++ b/pug/template/header.html
@@ -12,7 +12,7 @@
         <li class="menu-item"><a href="#">צור_קשר</a></li>
       </nav>
     </div>
-    <div class="phone__call"><a class="link__phone" href="#call">
+    <div class="header__phone"><a class="link__phone" href="#call">
         <div class="icon"><img class="icon__phone" src="/img/phone.png"/></div>
         <div class="phone__group">
           <div class="phone__label">התקשרו לפרטים:</div>
