--- a/css/main.css
+++ b/css/main.css
@@ -1,241 +1,302 @@
 *::-webkit-input-placeholder {
-  color: #666;
-  opacity: 1; }
+ color: #666;
+ opacity: 1;
+}
 
 *:-moz-placeholder {
-  color: #666;
-  opacity: 1; }
+ color: #666;
+ opacity: 1;
+}
 
 *::-moz-placeholder {
-  color: #666;
-  opacity: 1; }
+ color: #666;
+ opacity: 1;
+}
 
 *:-ms-input-placeholder {
-  color: #666;
-  opacity: 1; }
+ color: #666;
+ opacity: 1;
+}
 
-body input:focus:required:invalid,
-body textarea:focus:required:invalid {
-  color: #666; }
+body input:focus:required:invalid, body textarea:focus:required:invalid {
+ color: #666;
+}
 
-body input:required:valid,
-body textarea:required:valid {
-  color: #666; }
+body input:required:valid, body textarea:required:valid {
+ color: #666;
+}
 
 body {
-  direction: rtl;
-  font-size: 18px;
-  min-width: 320px;
-  max-width: 100%;
-  text-align: right;
-  height: 100vh;
-  width: 100%;
-  padding: 0;
-  margin: auto;
-  position: relative;
-  line-height: 1.6;
-  font-family: "RobotoRegular", sans-serif;
-  overflow-x: hidden;
-  list-style: none;
-  display: flex;
-  flex: 1;
-  flex-flow: column wrap;
-  justify-content: space-between;
-  align-items: center;
-  display: block; }
+ direction: rtl;
+ font-size: 18px;
+ min-width: 320px;
+ max-width: 100%;
+ text-align: right;
+ height: 100vh;
+ width: 100%;
+ padding: 0;
+ margin: auto;
+ position: relative;
+ line-height: 1.6;
+ font-family: "RobotoRegular", sans-serif;
+ overflow-x: hidden;
+ list-style: none;
+ display: flex;
+ flex: 1;
+ flex-flow: column wrap;
+ justify-content: space-between;
+ align-items: center;
+ display: block;
+}
 
 * {
-  box-sizing: content-box; }
+ box-sizing: content-box;
+}
 
 .hidden {
-  display: none; }
+ display: none;
+}
 
 ul {
-  margin: 0;
-  padding: 0; }
+ margin: 0;
+ padding: 0;
+}
 
 /*______________       Header CSS        _______________*/
 .header {
-  align-items: center;
-  min-height: 100px;
-  margin-bottom: 20px;
-  border-bottom: 1px solid #e5edee; }
+ align-items: center;
+ min-height: 100px;
+ margin-bottom: 20px;
+ border-bottom: 1px solid #e5edee;
+}
 
-.header__logo,
-.header__menu,
-.header__phone {
-  height: 100px;
-  display: flex; }
+.header__logo, .header__menu, .header__phone {
+ height: 100px;
+ display: flex;
+}
 
 .header__logo {
-  border-left: 1px solid #e5edee;
-  padding-left: 20px; }
+ border-left: 1px solid #e5edee;
+ padding-left: 20px;
+}
 
 .logo__link {
-  display: flex;
-  align-items: center; }
+ display: flex;
+ align-items: center;
+}
 
 .header__menu {
-  max-width: 730px;
-  width: 100%; }
+ max-width: 730px;
+ width: 100%;
+}
 
 .menu {
-  display: flex;
-  width: 100%; }
+ display: flex;
+ width: 100%;
+}
 
 .menu-item {
-  list-style: none;
-  display: inline-flex;
-  margin: auto; }
-  .menu-item a {
-    color: #000; }
+ list-style: none;
+ display: inline-flex;
+ margin: auto;
+}
+
+.menu-item a {
+ color: #000;
+}
 
 .header__phone {
-  border-right: 1px solid #e5edee; }
+ border-right: 1px solid #e5edee;
+}
 
 .link__phone {
-  display: flex;
-  align-items: center;
-  margin: auto 15px; }
+ display: flex;
+ align-items: center;
+ margin: auto 15px;
+}
 
 .icon__phone {
-  margin-left: 15px; }
+ margin-left: 15px;
+}
 
 .phone__label {
-  color: #000; }
+ color: #000;
+}
 
 .phone__number {
-  color: #233582;
-  font-size: 20px;
-  font-weight: 600; }
+ color: #233582;
+ font-size: 20px;
+ font-weight: 600;
+}
 
 /*_____________      Content CSS            _______________*/
 .header__banner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  color: #fff;
-  display: flex;
-  justify-content: flex-start; }
+ position: relative;
+ width: 100%;
+ height: 100%;
+ color: #fff;
+ display: flex;
+ justify-content: flex-start;
+ background: url(img/banner.jpg) top center no-repeat;
+}
 
 .banner__group-text {
-  position: absolute;
-  display: block;
-  bottom: 60px;
-  right: 60px; }
+ position: absolute;
+ display: block;
+ bottom: 60px;
+ right: 60px;
+}
 
 .banner__title {
-  font-size: 40px;
-  font-weight: 600; }
+ font-size: 40px;
+ font-weight: 600;
+}
 
 .banner__decription {
-  font-size: 22px; }
+ font-size: 22px;
+}
 
 .search__section {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  margin: 20px auto;
-  background: #f2fbfe; }
+ display: flex;
+ width: 100%;
+ justify-content: space-between;
+ margin: 20px auto;
+ background: #f2fbfe;
+}
 
 .inner-flex {
-  display: flex;
-  min-height: 108px;
-  flex-wrap: wrap;
-  width: 100%; }
+ display: flex;
+ min-height: 108px;
+ flex-wrap: wrap;
+ width: 100%;
+}
 
 .phone__group {
-  display: flex;
-  width: 50%;
-  align-items: center;
-  min-width: 320px;
-  justify-content: space-between; }
+
+ /*display: flex;
+ width: 50%;
+ min-width: 320px; */
+ justify-content: space-between;
+ align-items: center;
+}
 
 .phone__text {
-  color: #00b8f1;
-  font-size: 24px;
-  margin-left: 20px; }
+ color: #00b8f1;
+ font-size: 24px;
+ margin-left: 20px;
+}
 
 .search__form {
-  display: flex;
-  align-items: center;
-  width: 50%; }
-  .search__form .form-group {
-    display: flex;
-    margin: auto;
-    justify-content: space-between; }
-  .search__form form {
-    width: 100%;
-    margin-bottom: 0; }
+ display: flex;
+ align-items: center;
+ width: 50%;
+}
+
+.search__form .form-group {
+ display: flex;
+ margin: auto;
+ justify-content: space-between;
+}
+
+.search__form form {
+ width: 100%;
+ margin-bottom: 0;
+}
 
 .form-control {
-  max-width: 210px;
-  border-radius: 0; }
+ max-width: 210px;
+ border-radius: 0;
+}
 
 .btn {
-  padding: 10px 30px;
-  border-radius: 0; }
+ padding: 10px 30px;
+ border-radius: 0;
+}
 
 .btn-success {
-  background: #61ce70; }
+ background: #61ce70;
+}
 
 /*==========  Desktop First Method  ==========*/
+
 /* Large Devices, Wide Screens */
-@media only screen and (max-width: 1200px) {
-  /**/ }
+@media only screen and (max-width:1200px) {
+
+ /**/
+}
 
 /* Medium Devices, Desktops */
-@media only screen and (max-width: 992px) {
-  /**/ }
+@media only screen and (max-width:992px) {
+
+ /**/
+}
 
 /* Small Devices, Tablets */
-@media only screen and (max-width: 768px) {
-  /*Disable Animation on Mobile Devices*/
-  .animated {
-    /*CSS transitions*/
-    -o-transition-property: none !important;
-    -moz-transition-property: none !important;
-    -ms-transition-property: none !important;
-    -webkit-transition-property: none !important;
-    transition-property: none !important;
-    /*CSS transforms*/
-    -o-transform: none !important;
-    -moz-transform: none !important;
-    -ms-transform: none !important;
-    -webkit-transform: none !important;
-    transform: none !important;
-    /*CSS animations*/
-    -webkit-animation: none !important;
-    -moz-animation: none !important;
-    -o-animation: none !important;
-    -ms-animation: none !important;
-    animation: none !important; } }
+@media only screen and (max-width:768px) {
+
+ /*Disable Animation on Mobile Devices*/
+ .animated {
+
+  /*CSS transitions*/
+  -o-transition-property: none !important;
+  -moz-transition-property: none !important;
+  -ms-transition-property: none !important;
+  -webkit-transition-property: none !important;
+  transition-property: none !important;/*CSS transforms*/
+  -o-transform: none !important;
+  -moz-transform: none !important;
+  -ms-transform: none !important;
+  -webkit-transform: none !important;
+  transform: none !important;/*CSS animations*/
+  -webkit-animation: none !important;
+  -moz-animation: none !important;
+  -o-animation: none !important;
+  -ms-animation: none !important;
+  animation: none !important;
+ }
+
+}
 
 /* Extra Small Devices, Phones */
-@media only screen and (max-width: 480px) {
-  /**/ }
+@media only screen and (max-width:480px) {
+
+ /**/
+}
 
 /* Custom, iPhone Retina */
-@media only screen and (max-width: 320px) {
-  /**/ }
+@media only screen and (max-width:320px) {
+
+ /**/
+}
 
 /*==========  Mobile First Method  ==========*/
+
 /* Custom, iPhone Retina */
-@media only screen and (min-width: 320px) {
-  /**/ }
+@media only screen and (min-width:320px) {
+
+ /**/
+}
 
 /* Extra Small Devices, Phones */
-@media only screen and (min-width: 480px) {
-  /**/ }
+@media only screen and (min-width:480px) {
+
+ /**/
+}
 
 /* Small Devices, Tablets */
-@media only screen and (min-width: 768px) {
-  /**/ }
+@media only screen and (min-width:768px) {
+
+ /**/
+}
 
 /* Medium Devices, Desktops */
-@media only screen and (min-width: 992px) {
-  /**/ }
+@media only screen and (min-width:992px) {
+
+ /**/
+}
 
 /* Large Devices, Wide Screens */
-@media only screen and (min-width: 1200px) {
-  /**/ }
+@media only screen and (min-width:1200px) {
+
+ /**/
+}
