доделываем пиксель пёрфект для шапки

--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,7 @@ ul {
  min-height: 100px;
  margin-bottom: 20px;
  border-bottom: 1px solid #e5edee;
+ font-family: 'Rubik', sans-serif;
 }
 
 .header__logo, .header__menu, .header__phone {
@@ -77,7 +78,7 @@ ul {
 
 .header__logo {
  border-left: 1px solid #e5edee;
- padding-left: 20px;
+ margin-top: 5px;
 }
 
 .logo__link {
@@ -106,13 +107,14 @@ ul {
 }
 
 .header__phone {
- border-right: 1px solid #e5edee;
+ margin-top: -3px; /* border-right: 1px solid #e5edee;*/
 }
 
 .link__phone {
  display: flex;
  align-items: center;
- margin: auto 15px;
+ margin: auto 0px;
+ margin-left: 15px
 }
 
 .icon__phone {
@@ -121,12 +123,17 @@ ul {
 
 .phone__label {
  color: #000;
+ font-size: 14px;
 }
 
 .phone__number {
  color: #233582;
- font-size: 20px;
- font-weight: 600;
+ font-size: 21px;
+ font-weight: bold;
+ font-family: 'Rubik', sans-serif;
+ line-height: 1.429;
+ margin-left: 2px;
+ letter-spacing: 1.6px;
 }
 
 /*_____________      Content CSS            _______________*/
@@ -137,7 +144,8 @@ ul {
  color: #fff;
  display: flex;
  justify-content: flex-start;
- background: url(img/banner.jpg) top center no-repeat;
+ background: url(../img/banner.jpg) top center no-repeat;
+ margin: -3px -10px;
 }
 
 .banner__group-text {
@@ -217,58 +225,6 @@ ul {
  background: #61ce70;
 }
 
-/*==========  Desktop First Method  ==========*/
-
-/* Large Devices, Wide Screens */
-@media only screen and (max-width:1200px) {
-
- /**/
-}
-
-/* Medium Devices, Desktops */
-@media only screen and (max-width:992px) {
-
- /**/
-}
-
-/* Small Devices, Tablets */
-@media only screen and (max-width:768px) {
-
- /*Disable Animation on Mobile Devices*/
- .animated {
-
-  /*CSS transitions*/
-  -o-transition-property: none !important;
-  -moz-transition-property: none !important;
-  -ms-transition-property: none !important;
-  -webkit-transition-property: none !important;
-  transition-property: none !important;/*CSS transforms*/
-  -o-transform: none !important;
-  -moz-transform: none !important;
-  -ms-transform: none !important;
-  -webkit-transform: none !important;
-  transform: none !important;/*CSS animations*/
-  -webkit-animation: none !important;
-  -moz-animation: none !important;
-  -o-animation: none !important;
-  -ms-animation: none !important;
-  animation: none !important;
- }
-
-}
-
-/* Extra Small Devices, Phones */
-@media only screen and (max-width:480px) {
-
- /**/
-}
-
-/* Custom, iPhone Retina */
-@media only screen and (max-width:320px) {
-
- /**/
-}
-
 /*==========  Mobile First Method  ==========*/
 
 /* Custom, iPhone Retina */
@@ -297,6 +253,12 @@ ul {
 
 /* Large Devices, Wide Screens */
 @media only screen and (min-width:1200px) {
+ .container {
+  max-width: 1170px;
+ }
 
- /**/
+ .row {
+  margin: 0px -10px;
+ }
+
 }
