--- a/css/main.css
+++ b/css/main.css
@@ -177,8 +177,9 @@ ul {
 .search__section {
  display: flex;
  width: 100%;
+ margin-top: 25px;
  justify-content: space-between;
- margin-top: 58px;
+ padding: 33px 0;
  background: #f2fbfe;
 }
 
@@ -220,6 +221,15 @@ ul {
  display: inline-flex;
 }
 
+.search__number {
+ color: #233582;
+ font-size: 21px;
+ font-weight: bold;
+ line-height: 1.429;
+ margin-left: 15px;
+ letter-spacing: 3px;
+}
+
 .search__form form {
  width: 100%;
  margin-bottom: 0;
@@ -255,6 +265,55 @@ ul {
 
 .btn-success {
  background: #61ce70;
+}
+
+/*______________       SECTION 1 CSS        _______________*/
+.section1 {
+ text-align: center;
+ margin: 0 auto;
+ margin-top: 36px;
+ max-width: 1170px;
+}
+
+.section1__title {
+ color: #233582;
+ font-size: 34px;
+ letter-spacing: 1.5px;
+ line-height: 34px;
+ margin-left: 20px;
+}
+
+.section1 hr {
+ background-color: rgb(24, 159, 217);
+ width: 60px;
+ height: 2px;
+ margin-top: 14px;
+ margin-bottom: 32px;
+}
+
+.section__list {
+ display: inline-flex;
+ justify-content: space-between;
+ width: 100%;
+}
+
+.section__item {
+ width: 33.333%;
+ padding: 0 30px;
+}
+
+.item__img {
+ margin-bottom: 40px;
+}
+
+.item__title {
+ font-size: 23px;
+ font-family: "Rubik";
+ color: rgb(0, 184, 241);
+ font-weight: bold;
+ line-height: 1.2;
+ text-align: center;
+ margin-bottom: 25px;
 }
 
 /*==========  Mobile First Method  ==========*/
