--- a/css/main.css
+++ b/css/main.css
@@ -66,12 +66,17 @@ ul {
 
 /*______________       Header CSS        _______________*/
 .header {
+ position: fixed;
  align-items: center;
+ left: 0;
+ right: 0;
+ top: 0;
  max-height: 100px;
- margin: 0 -4px;
+ background-color: white;
  margin-bottom: 20px;
  border-bottom: 1px solid #e5edee;
  font-family: 'Rubik', sans-serif;
+ z-index: 10;
 }
 
 .header__logo,
@@ -121,7 +126,7 @@ ul {
  display: flex;
  align-items: center;
  margin: auto 0px;
- margin-left: 15px
+ margin-left: 10px
 }
 
 .icon__phone {
@@ -143,6 +148,12 @@ ul {
 }
 
 /*_____________      Content CSS            _______________*/
+.section__banner {
+ position: relative;
+ height: auto;
+ margin-top: 120px;
+}
+
 .header__banner {
  position: relative;
  width: 100%;
@@ -181,6 +192,7 @@ ul {
  justify-content: space-between;
  padding: 33px 0;
  background: #f2fbfe;
+ font-family: "Rubik", sans-serif;
 }
 
 .inner-flex {
@@ -234,6 +246,7 @@ ul {
 .search__form form {
  width: 100%;
  margin-bottom: 0;
+ margin: 0 5px;
 }
 
 .form-control {
@@ -262,6 +275,7 @@ ul {
 .btn {
  padding: 5px 37px;
  border-radius: 0;
+ font-weight: bold;
 }
 
 .btn-success {
@@ -360,6 +374,7 @@ ul {
 }
 
 .section2__item-img img {
+ margin-top: 40px;
  height: 45px;
 }
 
@@ -410,6 +425,7 @@ ul {
  line-height: 24px;
  font-size: 14px;
  margin-top: 15px;
+ max-height: 190px;
 }
 
 .footer__item-content>ul>li {
@@ -448,6 +464,29 @@ ul {
 .footer__bottom-copyright {
  line-height: 20px;
  float: right;
+}
+
+#map {
+ position: relative;
+ z-index: 2;
+ width: 100%;
+ height: 100%;
+ max-height: 190px;
+}
+
+.map__link {
+ position: relative;
+ z-index: 9;
+ width: 100%;
+ height: 100%;
+ max-height: 190px;
+ margin-top: -69%;
+}
+
+.map__link a {
+ display: block;
+ height: 100%;
+ width: 100%;
 }
 
 /*==========  Mobile First Method  ==========*/
