--- a/css/main.css
+++ b/css/main.css
@@ -100,33 +100,67 @@ ul {
 .header__menu {
  max-width: 710px;
  width: 100%;
- padding-left: 30px;
 }
 
 .menu {
- display: flex;
+ display: block;
+ line-height: 100px;
  width: 100%;
 }
 
 .menu-item {
  list-style: none;
- display: inline-flex;
- margin: auto;
+ display: inline-block;
+ margin: 0;
+ cursor: pointer;
+ float: right;
+ width: 23%;
+ padding: 0 1%;
+ text-align: center;
 }
 
 .menu-item a {
  color: #000;
 }
 
+.menu-item_submenu {
+ position: relative;
+ display: none;
+ margin: 0;
+ padding: 0 0%;
+ width: 109%;
+ background-color: #fff;
+ visibility: hidden;
+ opacity: 0;
+ transition: all 300ms ease;
+ margin-right: -4%;
+}
+
+.menu-item_submenu li {
+ padding: 0;
+ margin: 0;
+ list-style: none;
+ height: 40px;
+ line-height: 40px;
+}
+
+.submenu-active {
+ display: block;
+ visibility: visible;
+ opacity: 1;
+}
+
 .header__phone {
- margin-top: -3px; /* border-right: 1px solid #e5edee;*/
+ margin-top: -3px;
+ padding-right: 15px;
+ border-right: 1px solid #e5edee;
 }
 
 .link__phone {
  display: flex;
  align-items: center;
  margin: auto 0px;
- margin-left: 10px
+ margin-left: 10px;
 }
 
 .icon__phone {
