адаптив для небольших мониторов, ноутбуков

--- a/css/main.css
+++ b/css/main.css
@@ -198,7 +198,7 @@ ul {
  display: flex;
  justify-content: flex-start;
  background: url(../img/banner.jpg) top center no-repeat;
- margin: 0 -10px;
+ margin: 0 auto;
 }
 
 .banner__group-text {
@@ -234,8 +234,7 @@ ul {
  display: inline-flex;
  min-height: 40px;
  width: 100%;
- justify-content: space-between;
- margin-left: 18px;
+ justify-content: space-between; /*margin-left: 18px;*/
 }
 
 .phone__group {
@@ -285,7 +284,7 @@ ul {
 }
 
 .form-control {
- max-width: 210px;
+ max-width: 200px;
  border-radius: 0;
 }
 
@@ -527,27 +526,42 @@ ul {
 /*==========  Mobile First Method  ==========*/
 
 /* Custom, iPhone Retina */
-@media only screen and (min-width:320px) {
+@media only screen and (min-width:320px) and (max-width:480px) {
 
  /**/
 }
 
 /* Extra Small Devices, Phones */
-@media only screen and (min-width:480px) {
+@media only screen and (min-width:480px) and (max-width:768px) {
 
  /**/
 }
 
 /* Small Devices, Tablets */
-@media only screen and (min-width:768px) {
+@media only screen and (min-width:768px) and (max-width:992px) {
 
  /**/
 }
 
 /* Medium Devices, Desktops */
-@media only screen and (min-width:992px) {
+@media only screen and (min-width:992px) and (max-width:1200px) {
+ .container {
+  max-width: 1100px;
+ }
 
- /**/
+ .header__menu {
+  max-width: 660px;
+ }
+
+ .menu {
+  display: inline-flex;
+  justify-content: space-around;
+ }
+
+ .menu-item {
+  width: auto;
+ }
+
 }
 
 /* Large Devices, Wide Screens */
@@ -558,6 +572,10 @@ ul {
 
  .row {
   margin: 0px -10px;
+ }
+
+ .header__menu {
+  max-width: 710px;
  }
 
 }
