--- a/css/main.css
+++ b/css/main.css
@@ -538,19 +538,23 @@ ul {
 }
 
 /* Small Devices, Tablets */
-@media only screen and (min-width:768px) and (max-width:992px) {
+@media only screen and (min-width:768px) and (max-width:1023px) {
 
  /**/
 }
 
 /* Medium Devices, Desktops */
-@media only screen and (min-width:992px) and (max-width:1200px) {
+@media only screen and (min-width:1024px) and (max-width:1200px) {
  .container {
   max-width: 1100px;
  }
 
+ .header {
+  padding: 0 15px;
+ }
+
  .header__menu {
-  max-width: 660px;
+  max-width: 555px;
  }
 
  .menu {
@@ -562,12 +566,26 @@ ul {
   width: auto;
  }
 
+ .header__phone {
+  padding-left: 10px;
+ }
+
+ .search__section {
+  display: block;
+  width: 98%;
+  margin: 0 auto;
+ }
+
+ .search__number {
+  font-size: 18px;
+ }
+
  .phone__text {
   font-size: 20px;
  }
 
  .form-control {
-  max-width: 185px;
+  max-width: 34%;
  }
 
  .footer__bottom img {
