--- a/css/main.css
+++ b/css/main.css
@@ -532,6 +532,10 @@ ul {
 
 /* Custom, iPhone Retina */
 @media only screen and (min-width:320px) and (max-width:1024px) {
+ .header {
+  min-height: 100px;
+ }
+
  .header__logo {
   margin: 0 auto;
   margin-top: 0px;
@@ -798,6 +802,10 @@ ul {
  padding: 0 15px;
  margin: 35px auto;
  height: 180px;
+}
+
+.footer__bottom {
+ margin-top: 140px;
 }
 
 }
