--- a/css/main.css
+++ b/css/main.css
@@ -115,22 +115,23 @@ label {
 }
 
 .menu {
- display: block;
+ display: inline-flex;
  line-height: 100px;
+ justify-content: space-around;
  width: 100%;
+ letter-spacing: 1px;
 }
 
 .menu-item {
  position: relative;
- list-style: none;
- display: inline-block;
+ list-style: none; /*display: inline-block;*/
  margin: 0;
  cursor: pointer;
  float: right;
- width: 23%;
- padding: 0 1%;
+ padding: 0;
  text-align: center;
  height: 96px;
+ box-sizing: border-box
 }
 
 .menu-item::after {
@@ -156,6 +157,7 @@ label {
  height: 100%;
  box-sizing: border-box;
  text-decoration: none;
+ transition: all 0.7s ease-out;
 }
 
 .menu-item a:hover {
@@ -204,8 +206,9 @@ label {
 }
 
 .icon__phone {
- margin-left: 15px;
- margin-top: 10px;
+ margin-left: 16px;
+ margin-top: 11px;
+ height: 30px;
 }
 
 .phone__label {
@@ -218,12 +221,17 @@ label {
  font-weight: bold;
  line-height: 1;
  margin-left: 18px;
- letter-spacing: 0;
+ margin-top: 2px;
 }
 
 .phone__number a {
  text-decoration: none;
  color: #233582;
+ transition: all 0.7s ease;
+}
+
+.phone__number a:hover {
+ color: green;
 }
 
 /*_____________      Content CSS            _______________*/
@@ -244,15 +252,16 @@ label {
  display: flex;
  justify-content: flex-start;
  background: url(../img/banner.jpg) top center no-repeat;
- margin-left: 15px;
+ margin-left: 17px;
+ margin-top: 3px;
 }
 
 .banner__group-text {
  position: relative;
  display: block;
- top: 235px;
- right: 60px;
- letter-spacing: 2px;
+ top: 232px;
+ right: 53px;
+ letter-spacing: 1.3px;
  line-height: 2;
  max-height: 140px;
 }
@@ -262,8 +271,9 @@ label {
  font-weight: 600;
 }
 
-.banner__decription {
- font-size: 22px;
+.banner__descripton {
+ font-size: 21px;
+ letter-spacing: 0.7px;
 }
 
 .search__section {
@@ -336,6 +346,12 @@ label {
  height: 38px;
  padding: 12px;
  box-sizing: border-box;
+ outline: 0px solid lightblue;
+ transition: all 0.2s linear;
+}
+
+.wpcf7-text:focus {
+ outline: 3px solid lightblue;
 }
 
 .wpcf7-text::-webkit-input-placeholder {
@@ -456,6 +472,11 @@ label {
  padding-bottom: 40px;
 }
 
+.section2__item a {
+ text-decoration: none;
+ transition: all 0.7s ease-out;
+}
+
 .section2__item-title a:hover {
  color: green;
 }
@@ -522,6 +543,7 @@ label {
 .footer__item-content>ul>li {
  cursor: pointer;
  list-style: none;
+ transition: all 0.7s ease-out;
 }
 
 .footer__item-content>ul>li:hover {
@@ -540,6 +562,11 @@ label {
 .footer__item-content table span a {
  color: #189fd9;
  text-decoration: none;
+ transition: all 0.7s ease-out;
+}
+
+.footer__item-content table span a:hover {
+ color: green;
 }
 
 .footer__phone,
@@ -548,6 +575,11 @@ label {
  text-decoration: none;
  margin-top: 5px;
  font-size: 16px;
+ transition: all 0.7s ease;
+}
+
+.footer__phone a:hover {
+ color: #00b8f1;
 }
 
 .footer__cards img {
@@ -565,6 +597,7 @@ label {
 .footer__bottom a {
  color: black;
  text-decoration: none;
+ transition: 0.7s ease;
 }
 
 .footer__bottom img {
@@ -575,6 +608,10 @@ label {
  line-height: 20px;
  float: left;
  margin-left: 10px;
+}
+
+.footer__bottom-text a:hover {
+ color: green;
 }
 
 .footer__bottom-copyright {
@@ -613,24 +650,28 @@ label {
 /*==========  Mobile First Method  ==========*/
 
 /* Custom, iPhone Retina */
-@media only screen and (min-width:320px) and (max-width:1024px) {
+@media only screen and (min-width:320px) and (max-width:1023px) {
  .header {
-  min-height: 100px;
+  min-height: 60px;
  }
 
  .header__logo {
   margin: 0 auto;
-  margin-top: 0px;
   margin-top: 0;
   border: none;
   position: fixed;
   top: 0px;
+  height: 60px;
   left: 0;
   display: block;
   width: auto;
   background-color: #fff;
   box-sizing: border-box;
-  padding-top: 20px;
+ }
+
+ .logo__pic img {
+  height: 40px;
+  margin: 10px;
  }
 
  .header__phone {
@@ -646,31 +687,89 @@ label {
   position: fixed;
   right: 0;
   top: 0;
-  width: 30vw;
-  height: 100px;
-  line-height: 100px;
-  background-color: #eee;
+  height: 60px;
+  background-color: #00b8f1;
   text-align: center;
   cursor: pointer;
  }
 
- .menu__burger span {
+ header #mobile-menu-btn {
   display: block;
-  height: 4px;
-  width: 60%;
-  background-color: blue;
-  margin: 10px auto;
+  float: right;
+  margin: 0;
+  overflow: hidden;
+  padding: 18px 20px;
+  width: 40px;
+  position: relative;
+  right: 5px;
+ }
+
+ header #mobile-menu-btn span {
+  background-color: #fff;
+  display: block;
+  height: 3px;
+  left: 0;
+  margin-top: 5px;
+  position: relative;
+  top: 0;
+  transition: all 0.7s ease 0s;
+  width: 70%;
+  opacity: 1;
+ }
+
+ header #mobile-menu-btn.active span:nth-child(1) {
+  top: 8px;
+  transform: rotate(45deg);
+  background-color: #fff;
+ }
+
+ header #mobile-menu-btn.active span:nth-child(2) {
+  visibility: hidden;
+  opacity: 0;
+ }
+
+ header #mobile-menu-btn.active span:nth-child(3) {
+  top: -8px;
+  transform: rotate(-45deg);
+  background-color: #fff;
+ }
+
+ /*
+  header #menu { 
+   height: 100%;
+   width: 100%;
+   display: block;
+   z-index: 9999999;
+   background: #f2fbfe;
+   padding: 0;
+   transition: 0.7s; 
+  }
+ */
+ header .header__menu.active {
+  right: 0;
+  transition: 0.7s;
+ }
+
+ header .menu-header-container {
+  width: 62.5%;
+  height: 100%;
+  background: #f6f6f6;
+  padding-top: 3px;
  }
 
  .header__menu {
   max-width: 300px;
-  width: 50vw;
+  width: 50%;
   height: 100%;
   position: fixed;
-  right: -50vw;
+  right: -100%;
   top: 100px;
   transition: all 0.7s ease;
-  background-color: #fff;
+  background-color: #f2fbfe;
+ }
+
+ .menu {
+  display: block;
  }
 
  .menu-active {
@@ -686,16 +785,16 @@ label {
   width: 100%;
   padding: 0;
   text-align: right;
-  height: 40px;
-  line-height: 40px;
+  height: 80px;
+  line-height: 80px;
   box-sizing: border-box;
+  border-bottom: 1px grey solid;
  }
 
  .menu-item a {
   display: block;
   height: 100%;
   width: 100%;
-  background-color: #fff;
   transition: all 0.7s ease;
  }
 
@@ -709,12 +808,12 @@ label {
   margin: 0;
   padding: 0;
   width: 70%;
-  background-color: #fff;
+  background-color: #f2fbfe;
   visibility: hidden;
   opacity: 0;
   transition: all 0.7s ease;
-  right: 200px;
-  top: -40px;
+  right: 100%;
+  top: -80px;
   box-sizing: border-box;
  }
 
@@ -722,8 +821,9 @@ label {
   padding: 0;
   margin: 0;
   list-style: none;
-  height: 40px;
-  line-height: 40px;
+  height: 50px;
+  line-height: 50px;
+  border-bottom: 1px lightgrey solid;
  }
 
  .menu-item_submenu li a {
@@ -899,7 +999,7 @@ label {
 }
 
 /* Medium Devices, Desktops */
-@media only screen and (min-width:1025px) and (max-width:1200px) {
+@media only screen and (min-width:1024px) and (max-width:1200px) {
  .container {
   max-width: 1100px;
  }
@@ -942,7 +1042,7 @@ label {
  }
 
  .wpcf7-text {
-  max-width: 34%;
+  max-width: 182px;
  }
 
  .footer__bottom img {
@@ -1030,6 +1130,16 @@ label {
   line-height: 1.429;
   margin-left: 25px;
   letter-spacing: 2px;
+ }
+
+ .search__number a {
+  color: #233582;
+  text-decoration: none;
+  transition: all 0.7s ease-out;
+ }
+
+ .search__number a:hover {
+  color: green;
  }
 
  .search__form form {
