--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,7 @@ label {
  border-left: 1px solid #e5edee;
  margin-top: 5px;
  padding-left: 21px;
+ width: 215px;
 }
 
 .logo__link {
@@ -111,7 +112,7 @@ label {
 
 .header__menu {
  max-width: 710px;
- width: 100%;
+ width: calc(100% - 470px);
 }
 
 .menu {
@@ -192,6 +193,7 @@ label {
 }
 
 .header__phone {
+ width: 245px;
  margin-top: -3px;
  padding-top: 25px;
  padding-right: 15px;
@@ -653,6 +655,7 @@ label {
 @media only screen and (min-width:320px) and (max-width:1023px) {
  .header {
   min-height: 60px;
+  max-width: 100vw;
  }
 
  .header__logo {
@@ -763,7 +766,7 @@ label {
   height: 100%;
   position: fixed;
   right: -100%;
-  top: 100px;
+  top: 60px;
   transition: all 0.7s ease;
   background-color: #f2fbfe;
  }
@@ -841,6 +844,7 @@ label {
   display: block;
   top: 235px;
   right: 10px;
+  width: 90vw;
   letter-spacing: 2px;
   line-height: 2;
   max-height: 140px;
@@ -852,9 +856,8 @@ label {
   height: auto;
   min-height: 400px;
   color: #fff;
-  display: flex;
-  justify-content: flex-start;
   background: url(../img/banner.jpg) top center no-repeat;
+  padding: 0;
   margin: 0 auto;
  }
 
@@ -875,7 +878,8 @@ label {
  .inner-flex {
   display: block;
   min-height: 40px;
-  width: 60%;
+  width: 80%;
+  text-align: right;
   margin: 0 auto;
  }
 
@@ -896,7 +900,9 @@ label {
   margin-left: 5px;
   display: inline-block;
   line-height: 40px;
-  width: 50%;
+  width: calc(100% - 200px);
+  min-width: 230px;
+  float: right;
  }
 
  .search__form {
@@ -914,10 +920,10 @@ label {
   color: #233582;
   font-size: 19px;
   font-weight: bold;
-  line-height: 1.429;
   margin-left: 10px;
   letter-spacing: 2px;
   line-height: 40px;
+  width: 100%;
   float: left;
  }
 
@@ -929,9 +935,12 @@ label {
  }
 
  .wpcf7-text {
-  max-width: 60%;
   border-radius: 0;
   display: inline-block;
+  padding: 12px;
+  margin: 5px auto;
+  width: 75vw;
+  max-width: 75vw;
  }
 
  .wpcf7-submit {
@@ -954,9 +963,14 @@ label {
   flex-direction: column-reverse;
  }
 
+ .section1__title,
+ .section2__title {
+  margin: 0;
+ }
+
  .section1__item {
-  width: 75%;
-  padding: 0 30px;
+  width: 90%;
+  padding: 0 5%;
   margin: 25px auto;
  }
 
@@ -964,14 +978,13 @@ label {
   display: inline-flex;
   justify-content: space-around;
   max-width: 1210px;
-  padding-top: 35px;
   padding-bottom: 60px;
   flex-wrap: wrap;
   flex-direction: column-reverse;
  }
 
  .section2__item {
-  width: 75%;
+  width: 90%;
   margin: 15px auto;
   background-color: #fff;
   padding-bottom: 40px;
@@ -999,17 +1012,47 @@ label {
 }
 
 /* Medium Devices, Desktops */
-@media only screen and (min-width:1024px) and (max-width:1200px) {
- .container {
-  max-width: 1100px;
+@media only screen and (min-width:768px) and (max-width:1024px) {
+ .search__number {
+  color: #233582;
+  font-size: 19px;
+  font-weight: bold;
+  margin-left: 10px;
+  letter-spacing: 2px;
+  line-height: 40px;
+  width: 48%;
+  float: left;
  }
 
+ .phone__text {
+  color: #00b8f1;
+  font-size: 21px;
+  margin-left: 5px;
+  display: inline-block;
+  line-height: 40px;
+  width: 49%;
+ }
+
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (min-width:1024px) and (max-width:1200px) {
  .header {
   padding: 0 15px;
  }
 
+ .header__logo,
+ .header__menu,
+ .header__phone {
+  height: 100px;
+  display: flex;
+  float: right;
+  box-sizing: border-box;
+ }
+
  .header__menu {
   max-width: 555px;
+  width: calc(100% - 470px);
  }
 
  .menu {
@@ -1038,7 +1081,7 @@ label {
  }
 
  .phone__text {
-  font-size: 20px;
+  font-size: 19px;
  }
 
  .wpcf7-text {
@@ -1057,23 +1100,23 @@ label {
 
 /* Large Devices, Wide Screens */
 @media only screen and (min-width:1200px) {
- .container {
-  max-width: 1170px;
- }
-
- .row {
-  margin: 0px -10px;
+ .header {
+  max-width: 1210px;
+  margin: 0 auto;
+  margin-top: 120px;
+  display: inline-flex;
  }
 
  .header__menu {
   max-width: 710px;
+  width: calc(100% - 470px);
  }
 
- /*.menu {
-  display: block;
-  line-height: 100px;
-  width: 100%;
- }*/
+ .section__banner {
+  max-width: 1210px;
+  margin: 0 auto;
+ }
+
  .search__section {
   display: flex;
   width: 100%;
@@ -1088,10 +1131,10 @@ label {
   display: inline-flex;
   min-height: 40px;
   height: 40px;
-  width: 100%;
+  max-width: 1210px;
+  margin: 0 auto;
   align-items: center;
   justify-content: center;
-  margin: 0;
  }
 
  .phone__group {
